# todo-flow-app

./: .vercelignore  README.md  components.json  env.production  next.config.ts  package-lock.json  package.json  railway.toml
api/: auth.ts  tags.ts  tasks.ts  users.ts
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx  page.tsx
app/(app)/new-task/: page.tsx
app/(app)/tags/: page.tsx
app/(app)/tags/new-tag/: page.tsx
app/auth/(auth)/: layout.tsx  page.tsx
backend/: pyproject.toml  railway.toml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: auth.py  tags.py  task.py
backend/app/routes/: auth_router.py  tags_router.py  tasks_router.py  user_router.py
backend/app/schemas/: auth_schema.py  tag_schema.py  task_schema.py
backend/app/utils/: jwt.py  security.py
components/: Divider.tsx  EditTaskForm.tsx  MyTooltip.tsx  NavItem.tsx  SideNavbar.tsx  Tag.tsx  TaskCard.tsx  TasksColumn.tsx  TestApiUrl.tsx
components/ui/: calendar.tsx  dropdown-menu.tsx
hooks/: useDebounce.ts
lib/: api.ts  config.ts  date.ts
types/: tagType.ts  taskType.ts  userType.ts
utils/: computeStatus.tsx  sortTask.ts
