[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yiwywo18ypwtp1 <negalapetrovna77@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = ">=0.122.0,<0.123.0"
uvicorn = ">=0.38.0,<0.39.0"
beanie = ">=2.0.1,<3.0.0"
motor = ">=3.7.1,<4.0.0"
pymongo = ">=4.15.4,<5.0.0"
dotenv = ">=0.9.9,<0.10.0"
pydantic-settings = ">=2.12.0,<3.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
pydantic = {extras = ["email"], version = ">=2.12.5,<3.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
bcrypt = "4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
